--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_spinkit: ^5.2.0
+  sqflite: ^2.2.8+4
+  path_provider: ^2.0.15
+
 
 
 dev_dependencies:
