--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   sqflite: ^2.2.8+4
   path_provider: ^2.0.15
-
+  provider: ^6.0.5
 
 
 dev_dependencies:
